--- a/app.html
+++ b/app.html
@@ -413,7 +413,7 @@
           <a href="#app">App</a>
         </nav>
       </div>
-      <a class="cta" href="#app">Ouvrir l'app</a>
+      <a class="cta" href="index.html">Ouvrir l'app</a>
     </div>
   </header>
 
@@ -424,7 +424,7 @@
         <h1 class="h-title">Un regard croisé, humanisant et lucide.</h1>
         <p class="h-sub">Gérez vos tâches, contacts, articles & podcasts. Exportez un PDF élégant avec un récapitulatif automatique des actions réalisées.</p>
         <div class="hero-actions">
-          <a class="cta" href="#app">Ouvrir l'app</a>
+          <a class="cta" href="index.html">Ouvrir l'app</a>
           <a class="btn-secondary" href="#app">Découvrir l'outil</a>
         </div>
       </div>
@@ -480,7 +480,7 @@
       <div class="card fade-in-up">
         <h3>L'app qui vous accompagne</h3>
         <p>Tâches (assignées à <strong>Jude</strong>, <strong>Grace</strong> + autres), échéances, notes, vue Kanban & statistiques, thème du mois. Export PDF avec récapitulatif écrit.</p>
-        <a class="cta" href="#" style="margin-top: var(--space-md); display: inline-block;">Ouvrir l'app</a>
+        <a class="cta" href="index.html" style="margin-top: var(--space-md); display: inline-block;">Ouvrir l'app</a>
       </div>
       <div class="card fade-in-up">
         <h3>Déploiement simple</h3>
