--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@
         <div class="title"><h1>Regards Croisés — App</h1></div>
       </div>
       <div class="actions">
-        <a class="btn" href="index.html">Accueil</a>
+        <a class="btn" href="app.html">Accueil</a>
         <button id="btn-theme" class="btn">🌙 Sombre</button>
       </div>
     </div>
