--- a/index.html
+++ b/index.html
@@ -1020,6 +1020,18 @@
       </div>
 
       <div class="card slide-in">
+  <div class="card-header">
+    <h3>Éditeur de vitrine</h3>
+    <span class="badge">Design</span>
+  </div>
+  <p class="muted">Modifiez le contenu de votre page vitrine en quelques clics. Interface intuitive avec aperçu en temps réel et export automatique.</p>
+  <div class="actions">
+    <a href="vitrine-editor.html" class="btn btn-primary">🎨 Ouvrir l'éditeur</a>
+    <a href="vitrine.html" target="_blank" class="btn">👁️ Voir la vitrine</a>
+  </div>
+</div>
+
+      <div class="card slide-in">
         <div class="card-header">
           <h3>Maintenance</h3>
           <span class="badge warning">Admin</span>
